FBR-330 Write new Bookshare API client calls with HttpsURLConnection, renamed the BookshareWebServiceClient class.